--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "ejs": "^3.1.6",
     "express": "^4.17.3",
     "express-session": "^1.17.2",
+    "mongodb": "^4.5.0",
+    "mongoose": "^6.2.10",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
